feat(tools\custom-utils): 更新工具类